--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "minimist": "^0.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^1.9.1",
+    "mocha": "^1.20.1"
+  },
   "scripts": {
     "test": "mocha"
   },
