--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "greet",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "bin": {
     "greet": "./bin/greet.js"
   },
